fix(overflow): fix overflow on safari

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -20,7 +20,8 @@ code {
   font-size: 3rem;
 }
 
-html {
+html,
+body {
   overflow-y: hidden;
 }
 
